--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.example.android.gdgfinder.home.HomeViewModel" />
@@ -37,11 +38,11 @@
 
                 <TextView
                     android:id="@+id/title"
-                    style="@style/TextAppearance.Title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
                     android:text="@string/about_google_developer_groups"
+                    android:textAppearance="?textAppearanceHeadline5"
                     app:layout_constraintEnd_toStartOf="@+id/end_grid"
                     app:layout_constraintStart_toStartOf="@+id/start_grid"
                     app:layout_constraintTop_toBottomOf="@id/image" />
@@ -59,11 +60,11 @@
 
                 <TextView
                     android:id="@+id/subtitle"
-                    style="@style/TextAppearance.Subtitle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="13dp"
                     android:text="@string/gdgs_are"
+                    android:textAppearance="?textAppearanceHeadline6"
                     app:layout_constraintEnd_toStartOf="@id/end_grid"
                     app:layout_constraintStart_toEndOf="@id/start_grid"
                     app:layout_constraintTop_toBottomOf="@+id/intro_text" />
@@ -113,7 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_margin="16dp"
-            app:srcCompat="@drawable/ic_gdg"
-            android:onClick="@{() -> viewModel.onFabClicked()}"/>
+            android:onClick="@{() -> viewModel.onFabClicked()}"
+            app:srcCompat="@drawable/ic_gdg" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
