--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,14 +10,12 @@
         <item name="fontFamily">@font/roboto</item>
     </style>
 
-    <style name="TextAppearance.Title" parent="TextAppearance.MaterialComponents.Headline6">
-        <item name="android:textColor">#555555</item>
-        <item name="android:textSize">24sp</item>
-    </style>
-
-    <style name="TextAppearance.Subtitle" parent="TextAppearance.Title">
+    <style name="CustomHeadLine6" parent="TextAppearance.MaterialComponents.Headline6" >
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="MyActionBar" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
+        <item name="android:textColor">@color/primaryTextColor</item>
+    </style>
 
 </resources>
